--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,11 +12,11 @@ body {
   font-family: "Open Sans", sans-serif;
   color: #4d4643;
 }
-
+/* 
 a {
-  color: #441bbd;
+  color: #111010;
   text-decoration: none;
-}
+} */
 
 a:hover {
   color: #2ae149;
@@ -37,7 +37,7 @@ h1, h2, h3, h4, h5, h6 {
   right: 15px;
   bottom: 15px;
   z-index: 996;
-  background: #441bbd;
+  background: #356532;
   width: 40px;
   height: 40px;
   border-radius: 4px;
@@ -72,14 +72,14 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
     transition: all 0.5s;
     z-index: 997;
-    padding: 15px  0px 0px 0px;
+    padding: 11px  0px 0px 0px;
     box-shadow: 0px 2px 15px rgb(0 0 0 / 10%);
-    border-bottom: 3px solid #4c4fbd;
+    border-bottom: 3px solid #8cc53b;
 }
 #header .logo {
   font-size: 45px;
     margin: 0;
-    padding: 24px;
+    padding: 10px;
     line-height: 1;
     font-weight: 700;
     letter-spacing: 0.5px;
@@ -96,10 +96,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #111;
 }
 #header .logo a span {
-  color: #441bbd;
+  color: #356532;
 }
 #header .logo img {
-  max-height: 40px;
+  max-height: 60px;
 }
 
 /*--------------------------------------------------------------
@@ -121,7 +121,7 @@ h1, h2, h3, h4, h5, h6 {
   line-height: 0;
 }
 .header-social-links a:hover {
-  color: #441bbd;
+  color: #356532;
 }
 @media (max-width: 768px) {
   .header-social-links {
@@ -150,10 +150,11 @@ h1, h2, h3, h4, h5, h6 {
   position: relative;
 }
 .navbar a, .navbar a:focus {
+  text-decoration: none;
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding: 10px 0 10px 30px;
+  padding: 11px 20px;
   font-family: "Roboto", sans-serif;
   /* font-size: 13px;
   font-weight: 600;
@@ -171,8 +172,8 @@ h1, h2, h3, h4, h5, h6 {
   margin-left: 5px;
 }
 .navbar a:hover, .navbar .active, .navbar .active:focus, .navbar li:hover > a {
-  color: #441bbd;
-  /* border-bottom: 2px solid #441bbd; */
+  color: #356532;
+    border-bottom: 3px solid #8cc53b;
 }
 .navbar .dropdown ul {
   display: block;
@@ -187,7 +188,7 @@ h1, h2, h3, h4, h5, h6 {
   background: #fff;
   box-shadow: 0px 0px 30px rgba(127, 137, 161, 0.25);
   transition: 0.3s;
-  border-top: 2px solid #441bbd;
+  border-top: 2px solid #356532;
 }
 .navbar .dropdown ul li {
   min-width: 200px;
@@ -203,7 +204,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar .dropdown ul a:hover, .navbar .dropdown ul .active:hover, .navbar .dropdown ul li:hover > a {
-  color: #441bbd;
+  color: #356532;
 }
 .navbar .dropdown:hover > ul {
   opacity: 1;
@@ -288,7 +289,7 @@ h1, h2, h3, h4, h5, h6 {
   color: #111;
 }
 .navbar-mobile a:hover, .navbar-mobile .active, .navbar-mobile li:hover > a {
-  color: #441bbd;
+  color: #356532;
 }
 .navbar-mobile .getstarted, .navbar-mobile .getstarted:focus {
   margin: 15px;
@@ -314,7 +315,7 @@ h1, h2, h3, h4, h5, h6 {
   font-size: 12px;
 }
 .navbar-mobile .dropdown ul a:hover, .navbar-mobile .dropdown ul .active:hover, .navbar-mobile .dropdown ul li:hover > a {
-  color: #441bbd;
+  color: #356532;
 }
 .navbar-mobile .dropdown > .dropdown-active {
   display: block;
@@ -345,21 +346,22 @@ h1, h2, h3, h4, h5, h6 {
   align-items: flex-end;
   justify-content: center;
   position: absolute;
-  bottom: 60px;
-  top: 70px;
-  left: 55px;
-  right: 55px;
+  bottom: 113px;
+  top: 19px;
+  left: 270px;
+  /* right: 55px; */
 }
 #hero .carousel-content {
-  background: rgba(4, 4, 4, 0.7);
+  /* background: rgba(4, 4, 4, 0.7);
   padding: 20px;
   color: #fff;
-  border-top: 5px solid #441bbd;
+  border-top: 5px solid #356532; */
 }
 #hero .carousel-content h2 {
-  color: #fff;
+  font-family: 'Libre Bodoni', serif;
+  color: #356532;
   margin-bottom: 20px;
-  font-size: 28px;
+  font-size: 65px;
   font-weight: 700;
 }
 #hero .btn-get-started {
@@ -376,10 +378,10 @@ h1, h2, h3, h4, h5, h6 {
   color: #fff;
   -webkit-animation-delay: 0.8s;
   animation-delay: 0.8s;
-  border: 2px solid #441bbd;
+  border: 2px solid #356532;
 }
 #hero .btn-get-started:hover {
-  background: #441bbd;
+  background: #356532;
   color: #fff;
   text-decoration: none;
 }
@@ -438,11 +440,14 @@ h1, h2, h3, h4, h5, h6 {
 }
 #hero .carousel-indicators li.active {
   opacity: 1;
-  background: #441bbd;
+  background: #356532;
 }
-@media (min-width: 1024px) {
-  #hero .carousel-content {
-    /* width: 60%; */
+.carousel-control-prev{
+  text-decoration: none;
+}
+.carousel-control-next{
+  text-decoration: none;
+
   }
   #hero .carousel-control-prev, #hero .carousel-control-next {
     width: 5%;
@@ -483,9 +488,11 @@ section {
   padding-bottom: 30px;
 }
 .section-title h2 {
+  font-family: 'Libre Bodoni', serif;
+  /* color: #356532; */
   font-size: 32px;
   font-weight: bold;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
   margin-bottom: 20px;
   padding-bottom: 20px;
   position: relative;
@@ -496,7 +503,7 @@ section {
   display: block;
   width: 50px;
   height: 3px;
-  background: #441bbd;
+  background: #356532;
   bottom: 0;
   left: calc(50% - 25px);
 }
@@ -509,7 +516,7 @@ section {
 --------------------------------------------------------------*/
 .breadcrumbs {
   padding: 15px 0;
-  background: #441bbd;
+  background: #356532;
   min-height: 40px;
   margin-top: 72px;
 }
@@ -682,7 +689,7 @@ section {
 }
 .portfolio #portfolio-flters li:hover, .portfolio #portfolio-flters li.filter-active {
   color: #fff;
-  background: #441bbd;
+  background: #356532;
 }
 .portfolio #portfolio-flters li:last-child {
   margin-right: 0;
@@ -720,7 +727,7 @@ section {
   color: #2b2b2b;
 }
 .portfolio .portfolio-item .portfolio-info .preview-link:hover, .portfolio .portfolio-item .portfolio-info .details-link:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .portfolio .portfolio-item .portfolio-info .details-link {
   right: 10px;
@@ -767,10 +774,10 @@ section {
   height: 12px;
   background-color: #fff;
   opacity: 1;
-  border: 1px solid #441bbd;
+  border: 1px solid #356532;
 }
 .portfolio-details .portfolio-details-slider .swiper-pagination .swiper-pagination-bullet-active {
-  background-color: #441bbd;
+  background-color: #356532;
 }
 .portfolio-details .portfolio-info {
   padding: 30px;
@@ -835,12 +842,13 @@ section {
 # About Us
 --------------------------------------------------------------*/
 .about-us .content h2 {
-  color:#441bbd;
-  /* font-weight: 700; */
-  font-size: 42px;
+  color:#356532;
+  font-family: 'Libre Bodoni', serif;
+  font-weight: 700;
+  font-size: 38px;
   line-height: 60px;
   margin-bottom: 20px;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
 }
 .about-us .content h3 {
   font-weight: 500;
@@ -860,7 +868,7 @@ section {
   top: 7px;
   position: absolute;
   font-size: 20px;
-  color: #441bbd;
+  color: #356532;
 }
 .about-us .content p:last-child {
   margin-bottom: 0;
@@ -907,7 +915,7 @@ section {
   line-height: 0;
 }
 .team .member .social a:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .team .member .social i {
   font-size: 18px;
@@ -967,7 +975,7 @@ section {
   width: 1px;
   height: 10px;
   transition: 0.9s;
-  background-color: #441bbd;
+  background-color: #356532;
 }
 
 /*--------------------------------------------------------------
@@ -998,7 +1006,7 @@ section {
   transition: ease-in-out 0.3s;
 }
 .features .icon-box h3 a:hover {
-  color: #441bbd;
+  color: #6f996c;
 }
 
 /*--------------------------------------------------------------
@@ -1024,7 +1032,7 @@ section {
 }
 .pricing h4 {
   font-size: 36px;
-  color: #441bbd;
+  color: #356532;
   font-weight: 600;
   font-family: "Poppins", sans-serif;
   margin-bottom: 20px;
@@ -1051,7 +1059,7 @@ section {
   padding-bottom: 16px;
 }
 .pricing ul i {
-  color: #441bbd;
+  color: #356532;;
   font-size: 18px;
   padding-right: 4px;
 }
@@ -1066,7 +1074,7 @@ section {
   text-align: center;
 }
 .pricing .btn-buy {
-  background: #441bbd;
+  background: #356532;
   display: inline-block;
   padding: 8px 35px 10px 35px;
   border-radius: 4px;
@@ -1083,7 +1091,7 @@ section {
 }
 .pricing .featured h3 {
   color: #fff;
-  background: #441bbd;
+  background: #356532;
 }
 .pricing .advanced {
   width: 200px;
@@ -1094,7 +1102,7 @@ section {
   z-index: 1;
   font-size: 14px;
   padding: 1px 0 3px 0;
-  background: #441bbd;
+  background: #356532;
   color: #fff;
 }
 
@@ -1153,7 +1161,7 @@ section {
   transition: 0.3s;
 }
 .faq .faq-list a.collapsed:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .faq .faq-list a.collapsed .icon-show {
   display: inline-block;
@@ -1231,11 +1239,11 @@ section {
 }
 .contact .info i {
   font-size: 20px;
-  color: #441bbd;
+  color: #356532;
   float: left;
   width: 44px;
   height: 44px;
-  border: 1px solid #441bbd;
+  border: 1px solid #356532;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -1256,7 +1264,7 @@ section {
   color: #444444;
 }
 .contact .info:hover i {
-  background: #441bbd;
+  background: #356532;
   color: #fff;
 }
 .contact .php-email-form {
@@ -1312,7 +1320,7 @@ section {
   border-radius: 4px;
 }
 .contact .php-email-form input:focus, .contact .php-email-form textarea:focus {
-  border-color: #441bbd;
+  border-color: #356532;
 }
 .contact .php-email-form input {
   height: 44px;
@@ -1321,7 +1329,7 @@ section {
   padding: 10px 12px;
 }
 .contact .php-email-form button[type=submit] {
-  background: #441bbd;
+  background: #356532;
   border: 0;
   padding: 10px 24px;
   color: #fff;
@@ -1375,7 +1383,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-title a:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .blog .entry .entry-meta {
   margin-bottom: 15px;
@@ -1412,7 +1420,7 @@ section {
 }
 .blog .entry .entry-content .read-more a {
   display: inline-block;
-  background: #441bbd;
+  background: #356532;
   color: #fff;
   padding: 6px 20px;
   transition: 0.3s;
@@ -1420,7 +1428,7 @@ section {
   border-radius: 4px;
 }
 .blog .entry .entry-content .read-more a:hover {
-  background:#441bbd;
+  background:#356532;
 }
 .blog .entry .entry-content h3 {
   font-size: 22px;
@@ -1467,7 +1475,7 @@ section {
   transition: 0.3s;
 }
 .blog .entry .entry-footer a:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .blog .entry .entry-footer .cats {
   list-style: none;
@@ -1554,7 +1562,7 @@ section {
   transition: 0.3s;
 }
 .blog .blog-comments .comment h5 a:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .blog .blog-comments .comment h5 .reply {
   padding-left: 10px;
@@ -1635,7 +1643,7 @@ section {
   justify-content: center;
 }
 .blog .blog-pagination li.active, .blog .blog-pagination li:hover {
-  background: #441bbd;
+  background: #356532;
 }
 .blog .blog-pagination li.active a, .blog .blog-pagination li:hover a {
   color: #fff;
@@ -1678,7 +1686,7 @@ section {
   font-size: 16px;
   padding: 0 15px;
   margin: -1px;
-  background: #441bbd;
+  background: #356532;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1702,7 +1710,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .categories ul a:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .blog .sidebar .categories ul a span {
   padding-left: 5px;
@@ -1726,7 +1734,7 @@ section {
   transition: 0.3s;
 }
 .blog .sidebar .recent-posts h4 a:hover {
-  color: #441bbd;
+  color: #356532;
 }
 .blog .sidebar .recent-posts time {
   display: block;
@@ -1756,8 +1764,8 @@ section {
 }
 .blog .sidebar .tags ul a:hover {
   color: #fff;
-  border: 1px solid #441bbd;
-  background: #441bbd;
+  border: 1px solid #356532;
+  background: #356532;
 }
 .blog .sidebar .tags ul a span {
   padding-left: 5px;
@@ -1788,7 +1796,7 @@ section {
   font-weight: 500;
   letter-spacing: 1px;
   text-transform: uppercase;
-  color: #fff;
+  color: #8cc53b;
 }
 #footer .footer-top .footer-contact p {
   font-size: 14px;
@@ -1800,7 +1808,7 @@ section {
 #footer .footer-top h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #fff;
+  color: #8cc53b;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1814,7 +1822,7 @@ section {
 }
 #footer .footer-top .footer-links ul i {
   padding-right: 2px;
-  color: #441bbd;
+  color: #356532;
     font-size: 18px;
   line-height: 1;
 }
@@ -1831,6 +1839,7 @@ section {
   transition: 0.3s;
   display: inline-block;
   line-height: 1;
+  text-decoration: none;
 }
 #footer .footer-top .footer-links ul a:hover {
   text-decoration: none;
@@ -1843,7 +1852,7 @@ section {
 #footer .footer-newsletter h4 {
   font-size: 16px;
   font-weight: bold;
-  color: #fff;
+  color: #8cc53b;
   position: relative;
   padding-bottom: 12px;
 }
@@ -1869,7 +1878,7 @@ section {
   background: none;
   font-size: 16px;
   padding: 0 20px;
-  background: #441bbd;
+  background: #356532;;
   color: #fff;
   transition: 0.3s;
   border-radius: 0 4px 4px 0;
@@ -1898,7 +1907,7 @@ section {
   transition: 0.3s;
 }
 #footer .social-links a:hover {
-  background: #441bbd;
+  background: #356532;;
   color: #fff;
   text-decoration: none;
 }
@@ -1908,21 +1917,357 @@ section {
     list-style-type: none;
 }
 .gmailicon{
-  color: #441bbd;
-  font-size: 30px;
+  color: #356532;;
+  font-size: 16px;
 }
 .topgmail li{
-  font-size: 12px;
+  font-size: 10px;
 }
 .aboutimg img{
- 
+ height: 342px;
  width: 500px;
-  border:solid 12px #fff;
-  background:#fff;
-  box-shadow:0 0 15px 0px #555;
+    border: solid 12px #8cc53b;
+    background: #fff;
+    box-shadow: 0 0 15px 0px #a5d266;
   transition:all 1s ease;
   -o-transition:all 1s ease;
   -moz-transition:all 1s ease;
   -webkit-transition:all 1s ease;
   top:50px;
+}
+.toppadding{
+  margin-right: 5px;
+}
+.toppaddingone{
+ margin-right: 8px; 
+}
+.topheading{
+  margin-right: 10px;
+    border-right: 1px solid #c4c4c4;
+    padding-right: 10px;
+}
+
+/* CSS */
+.button-71 {
+  background-color: #8cc53b;
+  border: 0;
+  /* border-radius: 56px; */
+   border-radius: 30px;
+  color: #fff;
+  cursor: pointer;
+  display: inline-block;
+  /* font-family: system-ui,-apple-system,system-ui,"Segoe UI",Roboto,Ubuntu,"Helvetica Neue",sans-serif; */
+  font-size: 18px;
+  font-weight: 600;
+  outline: 0;
+  padding: 8px 20px;
+  position: relative;
+  text-align: center;
+  text-decoration: none;
+  transition: all .3s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+}
+
+.button-71:before {
+  background-color: initial;
+  background-image: linear-gradient(#fff 0, rgba(255, 255, 255, 0) 100%);
+  border-radius: 125px;
+  content: "";
+  height: 50%;
+  left: 4%;
+  opacity: .5;
+  position: absolute;
+  top: 0;
+  transition: all .3s;
+  width: 92%;
+}
+
+.button-71:hover {
+  /* box-shadow: rgba(255, 255, 255, .2) 0 3px 15px inset, rgba(0, 0, 0, .1) 0 3px 5px, rgba(0, 0, 0, .1) 0 10px 13px;
+  transform: scale(1.05); */
+}
+
+@media (min-width: 768px) {
+  .button-71 {
+    /* padding: 16px 48px; */
+  }
+} 
+
+.buttonicon{
+  padding: 10px;
+    background: #356532;
+    width: 40px;
+    height: 40px;
+    border-radius: 30px;
+}
+.button-71 a{
+text-decoration: none;
+color: white;
+}
+.alproducts{
+  background: white;
+}
+
+
+/* /////////////////////card */
+.cardcontainer {
+  width: 350px;
+  height: 409px;
+  background-color: #c9c9c9;
+  margin-left: auto;
+  margin-right: auto;
+  transition: 0.3s;
+  padding: 4px 15px 4px 15px;
+}
+
+/* .cardcontainer:hover {
+  box-shadow: 0 0 45px gray
+} */
+
+.photo {
+  height: 200px;
+  width: 100%
+}
+
+.photo img {
+  -webkit-filter: grayscale(100%); /* Safari 6.0 - 9.0 */
+  filter: grayscale(100%);
+  height: 100%;
+  width: 100%;
+  border-radius: 10px 10px 35px 0px;
+}
+
+.txt1 {
+  margin: auto;
+  text-align: center;
+  font-size: 17px
+}
+
+.content {
+  /* width: 80%;
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  position: relative;
+  top: -33px */
+}
+
+.photos {
+  width: 90px;
+  height: 30px;
+  background-color: #E74C3C;
+  color: white;
+  position: relative;
+  top: -30px;
+  padding-left: 10px;
+  font-size: 20px
+}
+
+.txt4 {
+  font-size: 27px;
+  position: relative;
+  top: 33px
+}
+
+.txt5 {
+  position: relative;
+  /* top: 18px; */
+  color: #356532;
+  font-size: 18px;
+  text-align: left;
+
+}
+
+.txt2 {
+  position: relative;
+  top: 10px
+}
+
+.cardcontainer:hover>.photo {
+  /* filter: grayscale(0%); */
+  /* height: 200px; */
+  /* animation: move1 0.5s ease both */
+}
+.cardcontainer:hover>.photo img{
+  -webkit-transform: scale(1);
+	transform: scale(1);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+  filter: grayscale(0%);
+  /* height: 200px; */
+  /* animation: move1 0.5s ease both */
+}
+
+@keyframes move1 {
+  0% {
+      height: 300px
+  }
+
+  100% {
+      height: 200px
+  }
+}
+
+.cardcontainer:hover>.content {
+  height: 200px
+}
+
+.footer {
+  width: 80%;
+  height: 100px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
+  position: relative;
+  top: -15px
+}
+
+.btn {
+  position: relative;
+  top: 20px
+}
+
+#heart {
+  cursor: pointer
+}
+
+.like {
+  float: right;
+  font-size: 22px;
+  position: relative;
+  top: 20px;
+  color: #333333
+}
+
+.fa-gratipay {
+  margin-right: 10px;
+  transition: 0.5s
+}
+
+.fa-gratipay:hover {
+  color: #E74C3C
+}
+
+.txt3 {
+  color: gray;
+  position: relative;
+  top: 18px;
+  font-size: 14px
+}
+
+.comments {
+  float: right;
+  cursor: pointer
+}
+
+.fa-clock,
+.fa-comments {
+  margin-right: 7px
+}
+
+.serviceBox{
+  color: #999;
+  font-family: 'Poppins', sans-serif;
+  text-align: center;
+  /* padding: 10px 0 15px; */
+  position: relative;
+}
+.serviceBox:before,
+.serviceBox:after{
+  content: "";
+  background: #356532;
+  width: 127px;
+  height: 26px;
+  transform: translateX(-50%);
+  position: absolute;
+  top: -26px;
+  left: 50%;
+  clip-path: polygon(7% 10%, 86% 11%, 87% 100%, 0% 102%);
+  left: 88px;
+  /* content: "";
+  background: #1e5270;
+  width: 150px;
+  height: 10px;
+  transform: translateX(-50%);
+  position: absolute;
+  top: 0;
+  left: 50%;
+  clip-path: polygon(7% 0%, 93% 0%, 100% 100%, 0% 100%); */
+}
+.serviceBox:after{
+  display: none;
+  width: 80%;
+  height: 15px;
+  border-radius: 0 0 10px 10px;
+  top: auto;
+  bottom: 0;
+  clip-path: none;
+}
+.serviceBox .service-content{
+  background: #fff;
+  padding: 15px 15px 0px 15px;
+  width: 295px;
+  /* border-radius: 10px; */
+}
+.serviceBox .service-content:before{
+  border-radius: 0 0 16px 34px;
+  content: "";
+  background: #8cc53b;
+  width: 101px;
+  height: 35px;
+  transform: translateX(-50%);
+  position: absolute;
+  top: -23px;
+  left: 27%;
+  /* clip-path: polygon(0 0, 100% 0, 50% 100%); */
+  /* content: "";
+  background:#1b657e;
+  width: 128px;
+  height: 100px;
+  transform: translateX(-50%);
+  position: absolute;
+  top: 0;
+  left: 50%;
+  clip-path: polygon(0 0, 100% 0, 50% 100%); */
+}
+.serviceboxread
+{
+  padding-bottom: 10px;
+  color:black;
+  text-align: left;
+}
+.serviceboxread a{
+  color: black;
+    text-decoration: none;
+    text-align: right;
+}
+.serviceBox ul
+{
+  padding-left: 0px;
+    display: flex;
+    /* display: flex; */
+    list-style-type: none;
+}
+.serviceBox ul li p{
+  font-size: 15px;
+    color: black;
+    margin-right: 9px;
+  margin-bottom: 0px;
+}
+.serviceBox ul li p i{
+  font-size: 16px;
+    color: #8cc53b;
+}
+.shapeheading{
+  top: -34px;
+  position: relative;
+  right: 61px;
+  color: white;
+  font-size: 17px;
+  margin-bottom: 0px;
+}
+.card-body{
+  text-align: center;
 }
